# gdal2_msvc

./: CMakeLists.txt  build.bat  gdal.patch  gdalConfig.cmake  geos.patch  proj4.patch
